[package]
name = "mini-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12.0"
cgmath = "0.18.0"

[dev-dependencies]
criterion = {version="0.3", features=["html_reports"]}

[[bench]]
name = "rendering"
harness = false