[package]
name = "subsampling-visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-raytracer = {path="../.."}
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12.0"
cgmath = "0.18.0"
rayon = "1.5.2"